4 - fix responsive issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -216,7 +216,6 @@ html {
 .home .intro p {
 	margin-top: 0;
 	margin-bottom: 0;
-	font-size: 30px;
 	font-size: 18px;
 	font-style: italic;
 }
@@ -273,7 +272,6 @@ html {
     height: auto;
     width: 100%;
     top: 65%;
-    background: rgba(255, 255, 255, 0.8);
 	background-color: rgba(0,0,0,0.8);
 	color: #fff;
     left: 0;
@@ -334,7 +332,7 @@ html {
 .home .scroll-down:hover {
 	background: rgba(255,255,255,.3);
 	border-color: rgba(255,255,255,1);
-	box-shadow: 0px 0px 10px rgba(255,255,255,0.8);
+	box-shadow: 0 0 10px rgba(255,255,255,0.8);
 }
 
 @-webkit-keyframes movedown {
@@ -430,21 +428,21 @@ html {
 .aboutMe .fa:after {
 	position: absolute;
 	width: 100px;
-    height: 100px;
+	height: 100px;
 	border-radius: 50%;
 	content: '';
-	    margin-top: -95px;
-		margin-left: -50px;
-    padding: 7px;
-    box-shadow: 0 0 0 4px #000;
-    -webkit-transition: -webkit-transform 0.2s, opacity 0.2s;
-    -webkit-transform: scale(.8);
-    -moz-transition: -moz-transform 0.2s, opacity 0.2s;
-    -moz-transform: scale(.8);
-    -ms-transform: scale(.8);
-    -webkit-transition: -webkit-transform 0.2s, opacity 0.2s;
-            transition: transform 0.2s, opacity 0.2s;
-    -webkit-transform: scale(.8);
+	margin-top: -95px;
+	margin-left: -50px;
+	padding: 7px;
+	box-shadow: 0 0 0 4px #000;
+	-webkit-transition: -webkit-transform 0.2s, opacity 0.2s;
+	-webkit-transform: scale(.8);
+	-moz-transition: -moz-transform 0.2s, opacity 0.2s;
+	-moz-transform: scale(.8);
+	-ms-transform: scale(.8);
+	-webkit-transition: -webkit-transform 0.2s, opacity 0.2s;
+	transition: transform 0.2s, opacity 0.2s;
+	-webkit-transform: scale(.8);
         -ms-transform: scale(.8);
             transform: scale(.8);
     opacity: 0;
@@ -581,7 +579,7 @@ html {
 
 .aboutMe .skillbar-bar {
 	height:33px;
-	width:0px;
+	width:0;
 	background:#6adcfa;
 	border-radius:3px;
 	-moz-border-radius:3px;
@@ -604,13 +602,16 @@ html {
 	display: block;
 }
 .aboutMe .responsive:after {
-    position: absolute;
-    content: "";
-    background: url('../img/EduNedMobile.jpg') no-repeat;
-    height: 100%;
+	position: absolute;
+	content: "";
+	background: url('../img/EduNedMobile.jpg') no-repeat;
+	height: 100%;
 	width: 252px;
 	background-size: 252px;
-    max-height: 446px;
+	max-height: 446px;
+	left: 50%;
+	transform: translateX(-50%);
+	top: 68px;
 }
 
 .aboutMe .pie-charts {
@@ -641,21 +642,12 @@ html {
 			transform: translateY(-50%);
 }
 
-.aboutMe .pie-chart-details {}
-
 .aboutMe .pie-chart-details h6 {
 	margin-bottom: 0;
 	font-weight: 700;
 }
 
 
-
-
-
-
-.projects {
-
-}
 
 .projects .projects {
 	text-align: center;
@@ -673,8 +665,6 @@ html {
 	font-weight: 600;
 	-webkit-transition: all 300ms linear;
 	transition: all 300ms linear;
-	font-size: 16px;
-	font-size: 25px;
 	font-size: 1.6rem;
 	color: #5592fa;
 }
@@ -699,11 +689,7 @@ html {
   filter: alpha(opacity=0);
   -webkit-transition: 550ms;
   transition: 550ms;
-  font-size: 20px;
-  line-height: 30px;
-  font-size: 32px;
   font-size: 2rem;
-  line-height: 48px;
   line-height: 3rem;
   font-weight: 400;
     color: #222222;
@@ -1064,17 +1050,6 @@ html {
 	.aboutMe .large-window {
 		background-size: 100%;
 	}
-	.aboutMe .responsive:after {
-		top: 68px;
-		left: 18px;
-		transition: left;
-
-	}
-	.aboutMe .responsive.animated:after {
-		left: 32px;
-		-webkit-transition-delay: 1.5s;
-	   	transition-delay: 1.5s;
-	}
 
 	.projects .option-set {
 		padding: 0;
@@ -1134,16 +1109,6 @@ html {
 
 	.home .intro {
 		margin-top: 250px;
-	}
-	.aboutMe .responsive:after {
-   		transition: left;
-		top: 67px;
-		left: 248px;
-	}
-	.aboutMe .responsive.animated:after {
-		left: 263px;
-		-webkit-transition-delay: 1.5s;
-	   transition-delay: 1.5s;
 	}
 
 	.aboutMe .large-window {
@@ -1205,7 +1170,6 @@ html {
 		color: #333;
 		background-color: #fff;
 		border-color: #333;
-		border-color: #333;
 	}
 
 	.logo {
@@ -1219,17 +1183,6 @@ html {
 
 	.home .intro {
 		margin-top: 150px;
-	}
-
-	.aboutMe .responsive:after {
-		transition: left;
-		top: 66px;
-		left: 107px;
-	}
-	.aboutMe .responsive.animated:after {
-		left: 123px;
-		-webkit-transition-delay: 1.5s;
-	   transition-delay: 1.5s;
 	}
 
 	.projects .option-set li {
@@ -1249,16 +1202,5 @@ html {
 		opacity: 0;
 		filter: alpha(opacity=0);
 		padding: 0 0;
-	}
-
-	.aboutMe .responsive:after {
-		left: 159px;
-		transition: left;
-
-	}
-	.aboutMe .responsive.animated:after {
-		left: 174px;
-		-webkit-transition-delay: 1.5s;
-	   	transition-delay: 1.5s;
 	}
 }
